main.css
/* Please insert all your CSS code into this document */
h1 {
	padding: .2em .5em 1em;
	}

h2 {
	padding: .2em;
	text-align: center;
	}

footer {
	position: fixed;
	bottom: 0;
	height: 100px;
	width: 100%;
	background: white;
	}

header.title {
	position: fixed;
	top: 0;
	height: 70px;
	width: 100%;
	background: white;
	float: none;
	}

#wrapper {
	margin: 200px 0 200px 0;
	}

.banner {
	display: block;
	margin: auto;
	width: 80%;
	}

/* page one */

aside.one {
	position: fixed;
	left: 0;
	width: 140px;
	padding: 0 .5em;
	color: #D3D3D3
	}

div.articles1 {
	position: fixed;
	left: 150px;
	height: 700px;
	width: 1200px;
	padding: 0 .4em;
	overflow: scroll;
}

img.body1 {
	width: 300px;
}

/* page two */

aside.two {
	float: left;
	min-width: 120px;
}

div.articles2 {
	min-height: 380 px;
	min-width: 350 px;
	padding: 0 20px;
	overflow: scroll;
}

.left2 {
	float: left;
	margin: 10px 35px 10px 0px;
	width: 170 px;
}

.right2 {
	float: right;
	margin: 10px 0px 10px 35px;
	width: 170px;
}

/* page three */

	aside.three {
		float: left;
		min-width: 120px;
	}

	div.articles3 {
		min-height: 400px;
		min-width: 350px;
		padding: 0 1.5em;
		overflow: scroll;
	}

	.right3 {
		float: right;
		margin: 1em 0em 1em 2em
		width: 25%
	}

	.left3 {
		float: left; 
		margin: 1em 2em 1em 0;
		width: 24%
	}

/* page four */

	aside.four {
		display: inline-block;
		vertical-align: top;
		width: 20%;
		min-width: 100px;
	}

	div.articles4 {
		display: inline-block;
		vertical-align: top;
		width: 70%;
		min-height: 400px;
		min-width:345px;
	}

	.right4 {
		float: right;
		margin: 1em 0em 1em 2em;
		width: 25%
	}

	.left4 {
		float: left;
		margin: 1em 2em 1em 0;
		width:25%
	}

/* page five */
	.gallery {
		display: inline-block
		margin: 8 px
		object-fit: gallery
	}
		

